2007-10-22  Daniel Jacobowitz  <dan@codesourcery.com>

	* top.c (command_loop): Fix output for shrinkage.

2007-10-22  Daniel Jacobowitz  <dan@codesourcery.com>

	* cp-name-parser.y (exp1): Add & ( var ) as a reference expression.
	(exp): Remove and document function-like casts.

2007-10-22  Daniel Jacobowitz  <dan@codesourcery.com>

	* cp-support.c: Include "safe-ctype.h".
	(cp_already_canonical): New function.
	(cp_canonicalize_string): Use it.  Return NULL for already canonical
	strings.
	(mangled_name_to_comp): Update call to cp_demangled_name_to_comp.
	(cp_func_name, remove_params): Likewise.
	(cp_find_first_component_aux): Use ISSPACE.
	* cp-support.h (cp_demangled_name_to_comp): Correct comment.  Remove
	MEMORY_P argument.
	* cp-name-parser.y (ALLOC_CHUNK): Define.
	(struct demangle_info): Add PREV and NEXT.  Increase the size of
	COMPS.
	(d_grab): Convert to a function.
	(allocate_info): Rewrite.
	(cp_demangled_name_to_comp): Remove MEMORY argument.  Do not use
	strlen.  Update call to allocate_info.  Do not free it on failure.
	(main): Update calls to cp_demangled_name_to_comp.
	* Makefile.in (cp-support.o): Update.

2007-10-22  Markus Deuling  <deuling@de.ibm.com>

	* std-regs.c (value_of_builtin_frame_fp_reg)
	value_of_builtin_frame_pc_reg, value_of_builtin_frame_sp_reg)
	value_of_builtin_frame_ps_reg): Use get_frame_arch to get at the
	current architecture by frame_info.

2007-10-22  Markus Deuling  <deuling@de.ibm.com>

	* reggroups.c (default_register_reggroup_p): Replace current_gdbarch
	by gdbarch.

2007-10-22  Markus Deuling  <deuling@de.ibm.com>

	* infcmd.c (default_print_registers_info, print_return_value)
	(print_vector_info, print_float_info): Replace current_gdbarch by
	gdbarch.
	(registers_info): Use get_frame_arch to get at the current 
	architecture by frame_info.

2007-10-22  Markus Deuling  <deuling@de.ibm.com>

	* i387-tdep.c (i387_collect_fsave, i387_collect_fxsave): Use