@@ -1,3 +1,9 @@
+2007-10-23  Joel Brobecker  <brobecker@adacore.com>
+
+	* buildsym.c (free_pending_blocks): Remove commented-out code.
+	(make_blockvector): Likewise. Re-use free_pending_blocks.
+	(end_symtab): Remove commented-out code.
+
 2007-10-22  Daniel Jacobowitz  <dan@codesourcery.com>
 
 	* top.c (command_loop): Fix output for shrinkage.
